--- a/package.json
+++ b/package.json
@@ -1,32 +1,17 @@
 {
   "name": "code2score",
-  "version": "1.0.0",
-  "description": "A music-themed code-to-score visualizer",
-  "main": "src/index.js",
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
     "codemirror": "^5.65.14",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tone": "13.8.25",
-    "vexflow": "^4.0.0"
+    "vexflow": "^4.0.0",
+    "@tonaljs/tonal": "^4.13.0",
+    "file-saver": "^2.0.5"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-}
-
+  "devDependencies": {
+    "gh-pages": "^6.2.0"
+  }
 }
