--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "tone": "^14.7.77",
+    "@tonaljs/tonal": "^4.12.0",
+    "file-saver": "^2.0.5",
+    "vexflow": "^4.0.0",
     "codemirror": "^5.65.14",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "tone": "13.8.25",
-    "vexflow": "^4.0.0",
-    "@tonaljs/tonal": "^4.10.0",
-    "file-saver": "^2.0.5"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "gh-pages": "^6.2.0"
