--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "tone": "^14.7.77",
+    "tone": "14.7.77",
     "@tonaljs/tonal": "^4.12.0",
     "file-saver": "^2.0.5",
     "vexflow": "^4.0.0",
