--- a/package.json
+++ b/package.json
@@ -3,18 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-  "tone": "14.7.77",
-  "@tonaljs/tonal": "^4.12.0",
-  "file-saver": "^2.0.5",
-  "vexflow": "^4.0.0",
-  "codemirror": "^5.65.14",
-  "react": "^18.2.0",
-  "react-dom": "^18.2.0"
-},
+    "tone": "^14.7.77",
+    "@tonaljs/tonal": "^3.6.0",
+    "file-saver": "^2.0.5",
+    "vexflow": "^4.0.0",
+    "codemirror": "^5.65.14",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
   "devDependencies": {
     "gh-pages": "^6.2.0"
   },
   "scripts": {
-  "start": "react-scripts start"
+    "start": "react-scripts start"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
